[package]
name = "k-mer-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
rdxsort = "*"
bit_reverse = "*"
anyhow = "1.0"
flate2 = "0.2"
voracious_radix_sort = { version = "1.1.0", features = ["voracious_multithread"] }